Logo and favicon updated. Fixed issues when searching white spaces with .catch(error).

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.header i {
-  margin-right: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .search {
